version/0.4/_sources/api/ansys/heart/postprocessor/exporter/D3plotToVTKExporter.rst.txt


:class:`D3plotToVTKExporter`
============================

.. py:class:: ansys.heart.postprocessor.exporter.D3plotToVTKExporter(d3plot_file: str, t_to_keep: float = 100000000000.0)

   
   Read d3plot and save deformed mesh.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: D3plotToVTKExporter

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~convert_to_pvgrid_at_t`
            - Convert d3plot data into pyvista UnstructuredGrid.



   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~data`
            - 
          * - :py:attr:`~save_time`
            - 






Import detail
-------------

.. code-block:: python

    from ansys.heart.postprocessor.exporter import D3plotToVTKExporter



Attribute detail
----------------
.. py:attribute:: data

.. py:attribute:: save_time



Method detail
-------------
.. py:method:: convert_to_pvgrid_at_t(time: float, fname: str = None) -> pyvista.UnstructuredGrid

   
   Convert d3plot data into pyvista UnstructuredGrid.


   :Parameters:

       **time** : :class:`python:float`
           time to convert

       **fname** : :class:`python:str`
           filename to be saved, default is None

       **Returns**
           ..

       **-------**
           ..

       **pv.UnstructuredGrid**
           result in pyvista object














   ..
       !! processed by numpydoc !!


